--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,99 @@
-.App {
-  text-align: center;
+body {
+    background-color: lightpink;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+    text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header {
+    background-color: #222;
+    padding: 16px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+header img {
+    height: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+header h1 {
+    font-size: 1.5em;
+    margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main {
+    padding: 32px;
+    display: flex;
+    justify-content: center;
+}
+
+button {
+    background-color: #4ec5e6;
+    color: white;
+    font-size: 1em;
+    padding: 1em;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    border-radius: 9px;
+}
+
+form {
+    width: 100%;
+    max-width: 300px;
+    text-align: left;
+}
+
+form input {
+    width: 100%;
+    font-size: 1em;
+    padding: 1em;
+    border: 2px solid rgba(0, 0, 0, 0.15);
+    border-radius: 9px;
+    outline: none;
+    margin-bottom: 10px;
+}
+
+form button + button {
+    margin-left: 10px;
+}
+
+.Button {
+    font-size: xx-large;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    background-color: cornflowerblue;
+    color: bisque;
+    border: 2px solid black;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    margin: 40px;
+}
+
+.Main {
+    display: block;
+    margin-bottom: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+.Head_PlayList {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.submit {
+    background-color: #4ec5e6;
+    color: white;
+}
+
+.Main-playList {
+    margin: 30px 20px;
+}
+
+.switcher select {
+    width: 99px;
+    height: 30px;
 }
